force-app/main/default/objects/PRM_Recent_News__c/PRM_Recent_News__c.object-meta.xml
<CustomObject>
    <description>These objects are displayed on the PRM homepage in the Recent News section.</description>
    <label>PRM Recent News</label>
    <nameField>
        <label>PRM Recent News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Recent News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>