force-app/main/default/objects/PRM_Recent_News__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Enter a URL of an image to display in the Recent News section of the PRM homepage.  This image will float to the left.  If a banner image is required, choose one that is an appropriate size (TBD).</description>
    <inlineHelpText>Enter a URL of an image to display in the Recent News section of the PRM homepage.  This image will float to the left.  If a banner image is required, choose one that is an appropriate size (TBD).</inlineHelpText>
    <label>Image</label>
    <type>Url</type>
</CustomField>