force-app/main/default/objects/PRM_Recent_News__c/fields/News_Text__c.field-meta.xml
<CustomField>
    <fullName>News_Text__c</fullName>
    <description>The text, exactly as it should appear on the PRM homepage.  All formatting, hyperlinks, and other HTML entered here will be transferred verbatim to the page.</description>
    <inlineHelpText>The text, exactly as it should appear on the PRM homepage.  All formatting, hyperlinks, and other HTML entered here will be transferred verbatim to the page.</inlineHelpText>
    <label>News Text</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>