force-app/main/default/objects/PRM_Recent_News__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>A sort order must be specified in order to include the news on the PRM homepage.  To remove a news item from the homepage, remove this value.   If multiple news items have a sort order, they will all be displayed in the order specified by this field.</description>
    <inlineHelpText>A sort order must be specified in order to include the news on the PRM homepage.  To remove a news item from the homepage, remove this value.   If multiple news items have a sort order, they will all be displayed in the order specified by this field.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>